# robot-monitor

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
client/: CMakeLists.txt  Makefile
client/src/: attribute_set.c  attribute_set_bool.c  attribute_set_char.c  attribute_set_float.c  attribute_set_int.c  attribute_set_string.c  call_private.h  connection.c  connection_private.h  connection_rf24.c  connection_spi.c  connection_spi_default.c  connection_uart.c  data.c  echo.c  echo_error.c  echo_warn.c  input.c  output.c  request.c  rm_call.c  rm_connection.c  rm_input.c  rm_output.c  rm_request.c  rm_string.c  rm_sync.c  robotmonitor.h  stm32_hal.h  string.c  sync.c  time.h
client/src/Arduino/: uart.cpp
client/src/hal/: rm_uart.c  rm_usbd_cdc.c  usbd_cdc_private.h  usbd_def.h
client/src/rm/: attribute.h  call.h  connection.h  connection_buffer.h  connection_rf24.h  connection_spi.h  connection_uart.h  connection_usart.h  echo.h  pin.h  request.h  string.h  sync.h
client/src/rm/Arduino/: uart.hpp  uart0.h
client/src/rm/hal/: hal.h  uart.h  usbd_cdc.h
client/test/: CMakeLists.txt  main.c  virtual_connection.c  virtual_connection.h
docs/: CMakeLists.txt  index.html
docs/api/: annotated.html  annotated_dup.js  attribute_8hpp.html  attribute_8hpp.js  attribute_8hpp_source.html  call_8hpp.html  call_8hpp_source.html  classes.html  classrmAttribute-members.html  classrmAttribute.html  classrmAttribute.js  classrmCall-members.html  classrmCall.html  classrmCall.js  classrmClient-members.html  classrmClient.html  classrmClient.js  client_8hpp.html  client_8hpp.js  client_8hpp_source.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_defs.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  robotmonitor_8hpp.html  robotmonitor_8hpp.js  robotmonitor_8hpp_source.html
docs/api/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
docs/client/: Doxyfile.doxygen
docs/client/api/: annotated.html  annotated_dup.js  attribute_8h.html  attribute_8h.js  attribute_8h_source.html  call_8h.html  call_8h.js  call_8h_source.html  classes.html  connection_8h.html  connection_8h.js  connection_8h_source.html  connection__buffer_8h.html  connection__buffer_8h.js  connection__buffer_8h_source.html  connection__usart_8h.html  connection__usart_8h.js  connection__usart_8h_source.html  dir_2f94aa430222a8f27e71ab7a92a697fd.html  dir_2f94aa430222a8f27e71ab7a92a697fd.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  robotmonitor_8h.html  robotmonitor_8h.js  robotmonitor_8h_source.html  struct__rmAttribute.html  struct__rmAttribute.js  struct__rmCall.html  (+3 more)
docs/client/api/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  (+15 more)
docs/station/: Doxyfile.doxygen
docs/station/api/: annotated.html  annotated_dup.js  attribute_8hpp.html  attribute_8hpp.js  attribute_8hpp_source.html  builtin__call_8hpp.html  builtin__call_8hpp.js  builtin__call_8hpp_source.html  button_8hpp.html  button_8hpp.js  button_8hpp_source.html  call_8hpp.html  call_8hpp.js  call_8hpp_source.html  checkbox_8hpp.html  checkbox_8hpp.js  checkbox_8hpp_source.html  classes.html  classrmAttribute-members.html  classrmAttribute.html  classrmAttribute.js  classrmAttributeNotifier-members.html  classrmAttributeNotifier.html  classrmAttributeNotifier.js  classrmAttributeNotifier__inherit__graph.map  classrmAttributeNotifier__inherit__graph.md5  classrmBuiltinCallEcho-members.html  classrmBuiltinCallEcho.html  classrmBuiltinCallEcho.js  classrmBuiltinCallEcho__inherit__graph.map  classrmBuiltinCallEcho__inherit__graph.md5  classrmBuiltinCallError-members.html  classrmBuiltinCallError.html  classrmBuiltinCallError.js  classrmBuiltinCallError__inherit__graph.map  classrmBuiltinCallError__inherit__graph.md5  classrmBuiltinCallSet-members.html  classrmBuiltinCallSet.html  classrmBuiltinCallSet.js  classrmBuiltinCallSet__inherit__graph.map  (+146 more)
station/: CMakeLists.txt  attribute.cpp  builtin_call.cpp  button.cpp  call.cpp  checkbox.cpp  client.cpp  client_com.cpp  echo.cpp  echobox.cpp  encryption.cpp  gauge.cpp  icon.c  icon.cpp  radiobox.cpp  request.cpp  robotmonitor.hpp  serial.cpp  serial_list.cpp  serial_wx.cpp  slider.cpp  spinctrl.cpp  stattext.cpp  sync.cpp  textctrl.cpp  timer.cpp  timerbase.cpp  widget.cpp  widget1.cpp  widget2.cpp
station/rm/: attribute.hpp  builtin_call.hpp  button.hpp  call.hpp  checkbox.hpp  client.hpp  config.h.in  echo.hpp  echobox.hpp  encryption.hpp  gauge.hpp  icon.h  icon.hpp  radiobox.hpp  request.hpp  serial.hpp  slider.hpp  spinctrl.hpp  stattext.hpp  sync.hpp  textctrl.hpp  timer.hpp  timerbase.hpp  widget.hpp
station/serial/: serial.cpp
station/serial/impl/: unix.h  win.h
test/: CMakeLists.txt
test/imu/: CMakeLists.txt  magnetometer.cpp  magnetometer.h  monitor.cpp  orientation.cpp  orientation.h  section.cpp  section.h  wxglade_out.cpp  wxglade_out.h
test/system1/: app.wxg  wxglade_out.cpp  wxglade_out.h
test/system1/station/: .gitignore  app.wxg  app.wxg~  wxglade_out.cpp  wxglade_out.cpp~  wxglade_out.h  wxglade_out.h~  wxglade_user.cpp
test/system2/station/: app.wxg  wxglade_out.cpp  wxglade_out.h  wxglade_user.cpp
test/unit/: attribute.cpp  client.cpp  encryption.cpp
test/unit/client/: attribute.cpp  data.cpp  robotmonitor.h
test/unit/station/: attribute.cpp  client.cpp  encryption.cpp  serial_list.cpp
(+60 files in other folders)
